# apatchy

./: .clangd  .gitignore  Dockerfile  README.md
apache_fuzzer/: README.md  fuzz_harness.c  pyproject.toml
apache_fuzzer/configs/: crypto-fuzz.conf  crypto-simple.conf  dav.conf  fuzz.conf  headers.conf  proxy.conf  pwn.conf  rewrite.conf  session-coverage.conf
apache_fuzzer/src/apache_fuzzer/: config.py  main.py  method_dispatcher.py
framework/: .clang-format  Dockerfile  README.md  fuzz-parallel.sh  fuzz_common.h  fuzz_harness.c  pyproject.toml
framework/afl-input/: seed1.txt  seed2.txt
framework/afl-input/rewrite/: rewrite_bot.txt  rewrite_chain.txt  rewrite_or_cond.txt  rewrite_post.txt  rewrite_redirect.txt  rewrite_user.txt  rewrite_www.txt
framework/bugs/cve_2020_11984/: bug.py  bug.toml  httpd.conf
framework/bugs/cve_2021_26690/: bug.py  bug.toml  httpd.conf  null_deref.textproto
framework/bugs/cve_2021_44790/: bug.py  bug.toml  httpd.conf
framework/bugs/cve_2022_23943/: bug.py  bug.toml  httpd.conf
framework/conf/: mime.types
framework/configs/: ajp.conf  ajp_dummy_server.py  charset.conf  cov-ajp.ignorelist  cov-imagemap.ignorelist  cov-rewrite.ignorelist  cov-session.ignorelist  cov-uwsgi.ignorelist  crypto-fuzz.conf  crypto.conf  cve-2022-23943.conf  deflate.conf  fuzz.conf  handler.lua  htaccess.conf  http2.conf  intsan.ignorelist  lsan.supp  lua.conf  maps.conf  passphrase-exec.sh  passphrase.txt  proxy-ajp.conf  proxy.conf  pwn.conf  remotip.conf  rewrite.conf  session-coverage.conf  test.map  ubsan.ignorelist  ubsan.supp  uwsgi.conf  wsgi-app.py  wsgi.conf
framework/configs/cve-2022-23943/: gen_seed.py  httpd.conf
framework/configs/ssl-seeds/: gen_seeds.sh  seed_ca.der  seed_ec.der  seed_expired.der  seed_extensions.der  seed_longserial.der  seed_minimal.der  seed_pem_format.pem  seed_rich_dn.der  seed_san.der  seed_wildcard.der
framework/custom_mutators/: deflate_config_mutator.c  header_mutator.c  http_mutator.c  http_mutator.cc  http_mutator.cpp  multipart_mutator.c  pwn_mutator.c  rewrite.c  rewrite_mutator.cpp  session_crypto_mutator.cpp
framework/custom_mutators/utils/: AK.h
framework/fuzz-seeds/ajp/: get_auth  get_auth_bad  get_basic  get_cpong  get_encoded_uri  get_error_override_401  get_error_override_500  get_many_headers  get_multi_body_chunks  get_no_reuse  get_overflow_headers  get_path_traversal  get_redirect  post_cl  post_get_body_chunk  post_large_header_value  post_raw_get_body  post_te_chunked  raw_garbage  raw_malformed  raw_truncated  smuggle_cl_te  smuggle_double_cl  smuggle_te_cl  smuggle_te_obfuscated
framework/fuzz-seeds/charset/: cn_esc_run.textproto  jp2_esc_nul.textproto  jp_esc_nul.textproto  jp_esc_run.textproto  jp_minimal.textproto  jp_put.textproto  kr_esc_run.textproto
framework/fuzz-seeds/default/: seed1.txt  seed2.txt
framework/fuzz-seeds/htaccess/: auth_directives.txt  deflate_filter.txt  errorhandling.txt  expressions.txt  headers_env.txt  limit_methods.txt  options_indexes.txt  rewrite_basic.txt  rewrite_complex.txt  sections_nested.txt  substitute_sed.txt
framework/fuzz-seeds/http2/: basic_get.txtpb  continuation.txtpb  goaway_ping.txtpb  multi_stream.txtpb  post_with_data.txtpb  priority_rst.txtpb  settings_ack.txtpb  window_update.txtpb
framework/fuzz-seeds/imagemap/: base.textproto  base_noslash_dotdot.textproto  circle.textproto  circle_empty_redirect.textproto  circle_hit.textproto  circle_miss2.textproto  circle_null.textproto  closest_empty_redirect.textproto  closest_null.textproto  comment_formatted.textproto  default.textproto  default_formatted.textproto  default_null_coords.textproto  default_null_menu.textproto  error_default.textproto  error_mapdefault.textproto  mapdflt_empty_redirect.textproto  menu_nocontent.textproto  poly.textproto  poly_empty_redirect.textproto  poly_inside.textproto  poly_null.textproto  rect.textproto  rect_dotdot_deplete.textproto  rect_dotdot_slash.textproto  rect_hit_reversed.textproto  (+6 more)
framework/grammars/: http_ajp.json  http_remoteip.json  http_session_crypto.json  http_uwsgi.json
framework/harnesses/: afl-clang-fast-ubsan-compat  fuzz_backend.c  fuzz_backend.h  fuzz_common.c  fuzz_common.h  mod_fuzzy.c  mod_fuzzy_deflate.c  mod_fuzzy_htaccess.c  mod_fuzzy_multi.c  mod_fuzzy_proto.cc  mod_fuzzy_proto_ajp.cc  mod_fuzzy_proto_charset.cc  mod_fuzzy_proto_http2.cc  mod_fuzzy_proto_imagemap.cc  mod_fuzzy_proto_multi.cc  mod_fuzzy_proto_multipart.cc  mod_fuzzy_proto_pwn.cc  mod_fuzzy_proto_rewrite.cc  mod_fuzzy_proto_session.cc  mod_fuzzy_proto_uwsgi.cc  openssl3_compat.h  proto_harness_common.h  proto_harness_main.cc
framework/introspector/: .gitignore  CMakeLists.txt  README.md  tree.json
framework/protos/: ajp_response.proto  charset_body.proto  http2_request.proto  http_request.proto  imagemap.proto  multi_request.proto  multipart_request.proto  pwn_request.proto  rewrite_request.proto  session_crypto.proto  uwsgi_req_res.proto
framework/tests/: conftest.py
(+235 files in other folders)
