[project]
name = "apatchy"
version = "0.1.0"
description = "A modular, Python-based fuzzing framework for Apache HTTPD"
authors = [
    {name = "Fuzzer Team", email = "fuzzer@example.com"},
]
dependencies = [
    "requests",
    "rich",
    "argcomplete",
]
requires-python = ">=3.8"

[project.optional-dependencies]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "myst-parser", "sphinxcontrib-mermaid"]
test = ["pytest", "pytest-cov"]

[project.scripts]
apatchy = "apatchy.main:main"

[tool.setuptools.package-data]
apatchy = ["grammars/*.json", "custom_mutators/*.c", "templates/*", "harnesses/*.c"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: requires real Apache source (download, compile, link)",
    "slow: tests that take more than a few seconds",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
