[project]
name = "apatchy"
version = "0.1.0"
description = "A modular, Python-based fuzzing framework for Apache HTTPD"
authors = [
    {name = "Fuzzer Team", email = "fuzzer@example.com"},
]
dependencies = [
    "requests",
    "rich",
    "argcomplete",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["ruff"]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx-rtd-theme", "myst-parser", "sphinxcontrib-mermaid", "sphinx-design", "sphinx-rtd-dark-mode", "sphinxcontrib-doxylink"]
test = ["pytest", "pytest-cov"]

[project.scripts]
apatchy = "apatchy.main:main"

[tool.setuptools.package-data]
apatchy = ["grammars/*.json", "custom_mutators/*.c", "templates/*", "harnesses/*.c"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast tests with no external dependencies",
    "integration: requires real Apache source (download, compile, link)",
    "slow: tests that take more than a few seconds",
]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "D",    # pydocstyle (docstring linting)
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "N801",  # class name convention
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["apatchy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
